<resources>
    <string name="app_name">Net4</string>
    <string name="login_texto">Log In</string>
    <string name="register_texto">Sign Up</string>
    <string name="login_email_hint">Email</string>
    <!--strings of the activity_email_recovery -->
    <string name="login_password_hint">Password</string>
    <string name="login_confirm_password_hint">Confirm Password</string>
    <string name="txt_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="txt_forgot_password_content">Por favor introduzca su email en la parte inferior. Se le enviará un correo para recuperar su cuenta.</string>
    <string name="btn_send_email_recovery">Enviar</string>
    <!--strings of the main activity -->
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_maps">Mapa</string>
    <string name="title_comunity">Comunidad</string>
    <string name="title_profile">Perfil</string>
    <string name="title_activity">Alertas</string>
    <string name="title_help_alert">Pedir Ayuda</string>
    <!--strings of the activity_settings -->
    <!--account -->
    <string name="account">Cuenta</string>
    <string name="change_password">Cambiar Contraseña</string>
    <string name="change_email">Cambiar Email</string>
    <string name="lenguage">Idioma</string>
    <!--permission -->
    <string name="permission">Permisos</string>
    <string name="notification">Permitir Notificaciones</string>
    <string name="acces_contact">Acceso a Contactos</string>
    <string name="localization">Permitir Ubicación</string>
    <string name="message">Permitir Mensajes de Otros</string>
    <!--others -->
    <string name="others">Otros</string>
    <string name="privacity">Politica de Privacidad</string>
    <string name="contact">Contacto</string>
    <string name="about_us">Sobre Nosotros</string>
    <string name="log_out">Cerrar Sesion</string>
    <!--strings of the activity_contact -->
    <string name="title_numero">Puedes llamar al siguiente número</string>
    <string name="numero">598321234</string>
    <string name="title_email">Puedes enviarnos un E-mail</string>
    <string name="email">net4@gmail.com</string>
    <string name="title_redes_sociales">Encuentranos en las redes sociales</string>
    <string name="redes_sociales_insta">NET_4</string>

    <!--strings of the activity_change_password-->
    <string name="title_change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="cancel">Cancel</string>

    <!--field strings  of the activity_change_password-->
    <string name="field_old_password">Old Password:</string>
    <string name="field_new_password">New Password:</string>
    <string name="field_repeat_password">Repeat Password:</string>

    <!--strings of the activity_change_email-->
    <string name="title_change_personal_info">Change Personal Information</string>
    <string name="email_address">E-mail Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>

    <!--strings of the Google permision -->
    <string name="facebook_app_id">2909638252637162</string>
    <string name="fb_login_protocol_scheme">fb2909638252637162</string>


    <!--field strings of the activity_change_email-->
    <string name="field_email_address">E-mail Address:</string>
    <string name="field_phone_number">Phone Number:</string>
    <string name="field_gender">Gender:</string>
    <string name="field_birthday">Birthday:</string>
    <string name="username_hint">Username</string>
    <string name="continue_registration">Next Step</string>
    <string name="continue_registration_title">User Info</string>
    <string name="name">Name</string>
    <string name="description_hint">Description</string>
    <string name="add_photo">Add Photo:</string>
    <string name="back">Go Back</string>

    <string name="textoChat">Escriba aquí</string>
</resources>
