<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_maps">

    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.pass.net4_proyecto_integrador.mainActivities.maps.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/activity_maps" />

    <fragment
        android:id="@+id/navigation_activity"
        android:name="com.pass.net4_proyecto_integrador.mainActivities.dashboard.DashboardActivity"
        android:label="@string/title_activity"
        tools:layout="@layout/activity_dashboard" />

    <fragment
        android:id="@+id/navigation_help_alert"
        android:name="com.pass.net4_proyecto_integrador.mainActivities.helpAlert.HelpAlertActivity"
        android:label="@string/title_help_alert"
        tools:layout="@layout/activity_help_alert" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.pass.net4_proyecto_integrador.mainActivities.notifications.NotificationsFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/activity_chat" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.pass.net4_proyecto_integrador.mainActivities.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/activity_profile" />

</navigation>