<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_cuenta"
                android:layout_width="match_parent"
                android:paddingTop="18dp"
                android:layout_height="60dp"
                android:paddingLeft="15dp"
                android:textSize="20dp"
                android:background="@color/colorFondoGris"
                android:text="@string/account"
                android:textColor="@color/black"/>
            <LinearLayout
                android:id="@+id/cambiar_contraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txt_cambiar_contraseña"
                    android:layout_width="311dp"
                    android:paddingTop="18dp"
                    android:layout_height="60dp"
                    android:paddingLeft="15dp"
                    android:textSize="20dp"
                    android:text="@string/change_password"
                    android:textColor="@color/black"/>

                <ImageView
                    android:id="@+id/image_cambiar_contraseña"
                    android:layout_width="73dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/ic_arrow_settings_foreground"
                    tools:layout_editor_absoluteX="339dp"
                    tools:layout_editor_absoluteY="88dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/changePersonalInfo">
                <TextView
                    android:id="@+id/txt_cambiar_email"
                    android:layout_width="311dp"
                    android:paddingTop="18dp"
                    android:layout_height="60dp"
                    android:paddingLeft="15dp"
                    android:textSize="20dp"
                    android:text="@string/change_email"
                    android:textColor="@color/black"/>
                <ImageView
                    android:id="@+id/image_cambiar_email"
                    android:layout_width="73dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/ic_arrow_settings_foreground"
                    tools:layout_editor_absoluteX="339dp"
                    tools:layout_editor_absoluteY="88dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txt_idioma"
                    android:layout_width="311dp"
                    android:paddingTop="18dp"
                    android:layout_height="60dp"
                    android:paddingLeft="15dp"
                    android:textSize="20dp"
                    android:text="@string/lenguage"
                    android:textColor="@color/black"/>
                <ImageView
                    android:id="@+id/image_idioma"
                    android:layout_width="73dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/ic_arrow_settings_foreground"
                    tools:layout_editor_absoluteX="339dp"
                    tools:layout_editor_absoluteY="88dp" />
            </LinearLayout>
            <TextView
                android:id="@+id/txt_privacidad"
                android:layout_width="match_parent"
                android:paddingTop="18dp"
                android:layout_height="60dp"
                android:paddingLeft="15dp"
                android:textSize="20dp"
                android:background="@color/colorFondoGris"
                android:text="@string/permission"
                android:textColor="@color/black"/>
            <Switch
                android:id="@+id/switch_notificaciones"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="20dp"
                android:text="@string/notification" />
            <Switch
                android:id="@+id/switch_contactos"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="20dp"
                android:text="@string/acces_contact" />
            <Switch
                android:id="@+id/switch_ubicacion"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="20dp"
                android:text="@string/localization" />
            <Switch
                android:id="@+id/switch_mensajes"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="20dp"
                android:text="@string/message" />
            <TextView
                android:id="@+id/txt_otro"
                android:layout_width="match_parent"
                android:paddingTop="18dp"
                android:layout_height="60dp"
                android:paddingLeft="15dp"
                android:textSize="20dp"
                android:background="@color/colorFondoGris"
                android:text="@string/others"
                android:textColor="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/politica_privacidad">
                <TextView
                    android:id="@+id/txt_politica_privacidad"
                    android:layout_width="311dp"
                    android:paddingTop="18dp"
                    android:layout_height="60dp"
                    android:paddingLeft="15dp"
                    android:textSize="20dp"
                    android:text="@string/privacity"
                    android:textColor="@color/black"/>
                <ImageView
                    android:id="@+id/image_politica_privacidad"
                    android:layout_width="73dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/ic_arrow_settings_foreground"
                    tools:layout_editor_absoluteX="339dp"
                    tools:layout_editor_absoluteY="88dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/contacto">
                <TextView
                    android:id="@+id/txt_contacto"
                    android:layout_width="311dp"
                    android:paddingTop="18dp"
                    android:layout_height="60dp"
                    android:paddingLeft="15dp"
                    android:textSize="20dp"
                    android:text="@string/contact"
                    android:textColor="@color/black"/>
                <ImageView
                    android:id="@+id/image_contacto"
                    android:layout_width="73dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/ic_arrow_settings_foreground"
                    tools:layout_editor_absoluteX="339dp"
                    tools:layout_editor_absoluteY="88dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txt_sobre_nosotros"
                    android:layout_width="311dp"
                    android:paddingTop="18dp"
                    android:layout_height="60dp"
                    android:paddingLeft="15dp"
                    android:textSize="20dp"
                    android:text="@string/about_us"
                    android:textColor="@color/black"/>
                <ImageView
                    android:id="@+id/image_sobre_nosotros"
                    android:layout_width="73dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/ic_arrow_settings_foreground"
                    tools:layout_editor_absoluteX="339dp"
                    tools:layout_editor_absoluteY="88dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/cerrar_sesion">
                <TextView
                    android:id="@+id/txt_cerrar_sesion"
                    android:layout_width="311dp"
                    android:paddingTop="18dp"
                    android:layout_height="60dp"
                    android:paddingLeft="15dp"
                    android:textSize="20dp"
                    android:text="@string/log_out"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <ImageView
                    android:id="@+id/image_cerrar_sesion"
                    android:layout_width="73dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/ic_arrow_settings_foreground"
                    tools:layout_editor_absoluteX="339dp"
                    tools:layout_editor_absoluteY="88dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>